--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,16 @@
 .App {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
   .container {
-    margin: 0 20px 0 20px;
+    margin: 50px 20px 0 20px;
     width: 1440px;
   }
   .buttons {
     display: grid;
-    grid-template-columns: 3fr 3fr 3fr 3fr 3fr 3fr 3fr 3fr;
+    grid-template-columns: repeat(8, 3fr);
     grid-template-rows: auto;
     grid-row-gap: 16px;
   }
